# slack-summarizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  digest.py  main.py  modal_smoke_test.py  notebooklm_integration.py  notebooklm_smoke_test.py  pyproject.toml  research.py  setup.py  slack_app_manifest.yaml  slack_client.py  state.py  validate.py
prompts/: cluster_themer.md  daily_digest.md  theme_summarizer.md
